# CJ_boost_beast

./: CMakeLists.txt  boost_header.h  data_collector.cpp  data_collector.h  database_connector.cpp  database_connector.h  define_utility.h  do_connection.h  handler_uri.cpp  handler_uri.h  handler_utility.h  libmysqlcppconn-dev_8.1.0-1ubuntu23.04_amd64.deb  main.cpp  make_json_format.h  message_to_define.h  messge.json  session.cpp  session.h  token_parser.cpp  token_parser.h
boost_tools/: INSTALL_RECEIPT.json  sbom.spdx.json
boost_tools/lib/: libboost_atomic-mt.dylib  libboost_charconv-mt.dylib  libboost_charconv.dylib  libboost_chrono-mt.dylib  libboost_chrono.dylib  libboost_container-mt.dylib  libboost_container.dylib  libboost_context-mt.dylib  libboost_contract-mt.dylib  libboost_contract.dylib  libboost_coroutine-mt.dylib  libboost_coroutine.dylib  libboost_date_time-mt.dylib  libboost_date_time.dylib  libboost_fiber-mt.dylib  libboost_filesystem-mt.dylib  libboost_filesystem.dylib  libboost_graph-mt.dylib  libboost_graph.dylib  libboost_iostreams-mt.dylib  libboost_iostreams.dylib  libboost_json-mt.dylib  libboost_json.dylib  libboost_locale-mt.dylib  libboost_log-mt.dylib  libboost_log.dylib  libboost_log_setup-mt.dylib  libboost_log_setup.dylib  libboost_math_c99-mt.dylib  libboost_math_c99.dylib  libboost_math_c99f-mt.dylib  libboost_math_c99f.dylib  libboost_math_c99l-mt.dylib  libboost_math_c99l.dylib  libboost_math_tr1-mt.dylib  libboost_math_tr1.dylib  libboost_math_tr1f-mt.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l-mt.dylib  libboost_math_tr1l.dylib  (+33 more)
boost_tools/lib/cmake/boost_atomic-1.85.0/: boost_atomic-config.cmake  libboost_atomic-variant-mt-shared.cmake  libboost_atomic-variant-mt-static.cmake
boost_tools/lib/cmake/boost_charconv-1.85.0/: boost_charconv-config.cmake  libboost_charconv-variant-mt-shared.cmake  libboost_charconv-variant-mt-static.cmake  libboost_charconv-variant-shared.cmake  libboost_charconv-variant-static.cmake
boost_tools/lib/cmake/boost_chrono-1.85.0/: boost_chrono-config.cmake  libboost_chrono-variant-mt-shared.cmake  libboost_chrono-variant-mt-static.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
boost_tools/lib/cmake/boost_container-1.85.0/: boost_container-config.cmake  libboost_container-variant-mt-shared.cmake  libboost_container-variant-mt-static.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
boost_tools/lib/cmake/boost_context-1.85.0/: boost_context-config.cmake  libboost_context-variant-mt-shared.cmake  libboost_context-variant-mt-static.cmake
boost_tools/lib/cmake/boost_contract-1.85.0/: boost_contract-config.cmake  libboost_contract-variant-mt-shared.cmake  libboost_contract-variant-mt-static.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
boost_tools/lib/cmake/boost_coroutine-1.85.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-mt-shared.cmake  libboost_coroutine-variant-mt-static.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
boost_tools/lib/cmake/boost_date_time-1.85.0/: boost_date_time-config.cmake  libboost_date_time-variant-mt-shared.cmake  libboost_date_time-variant-mt-static.cmake  libboost_date_time-variant-shared.cmake  libboost_date_time-variant-static.cmake
boost_tools/lib/cmake/boost_exception-1.85.0/: boost_exception-config.cmake
boost_tools/lib/cmake/boost_fiber-1.85.0/: boost_fiber-config.cmake  libboost_fiber-variant-mt-shared.cmake  libboost_fiber-variant-mt-static.cmake
boost_tools/lib/cmake/boost_filesystem-1.85.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-mt-shared.cmake  (+3 more)
curl_test_bash_script/: zzzget_heart_rate_test.sh  zzzset_heart_rate_test.sh
mysql-connector-c++-8.1.0/lib64/: libmysqlcppconn.9.dylib  libmysqlcppconn8.2.dylib
mysql-connector-c++/8.3.0/: INFO_BIN  INFO_SRC  INSTALL_RECEIPT.json  mysql-concpp-config.cmake  sbom.spdx.json
mysql-connector-c++/8.3.0/.brew/: mysql-connector-c++.rb
mysql-connector-c++/8.3.0/lib/: libmysqlcppconn8.2.8.3.0.dylib  libmysqlcppconn8.2.dylib
openssl/3.3.1/: INSTALL_RECEIPT.json  sbom.spdx.json
openssl/3.3.1/.brew/: openssl@3.rb
openssl/3.3.1/lib/: libssl.3.dylib
(+1524 files in other folders)
